--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"pointer",
 		"css"
 	],
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"license": "GPL-3.0-or-later",
 	"author": {
 		"name": "Aritz Beobide-Cardinal",
@@ -31,17 +31,20 @@
 		"docs": "typedoc src/index.ts"
 	},
 	"dependencies": {
-		"@aritz-cracker/browser-utils": "^1.2.1"
+		"@aritz-cracker/browser-utils": "^1.3.1"
 	},
 	"devDependencies": {
 		"ts-loader": "^9.5.1",
 		"typedoc": "^0.25.13",
 		"typescript": "^5.4.5",
-		"webpack": "^5.91.0",
+		"webpack": "^5.92.0",
 		"webpack-cli": "^5.1.4"
 	},
 	"files": [
 		"dist/index.js",
 		"dist/index.d.ts"
+	],
+	"sideEffects": [
+		"dist/index.js"
 	]
 }
